external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/missing_match_struct.ide.exp
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/ide_mode/missing_match_struct.move:6:16
  │
6 │         match (s) {
  │                ^ Pattern '_' not covered

note[I15004]: IDE missing match arms
  ┌─ tests/move_2024/ide_mode/missing_match_struct.move:6:19
  │  
6 │           match (s) {
  │ ╭───────────────────^
7 │ │         }
  │ ╰─────────^ Missing arms: '0x42::m::S { x , y }'

error[E04016]: too few arguments
   ┌─ tests/move_2024/ide_mode/missing_match_struct.move:12:13
   │
12 │             S { } => 0
   │             ^^^^^ Missing pattern for field 'x' in '0x42::m::S'

error[E04016]: too few arguments
   ┌─ tests/move_2024/ide_mode/missing_match_struct.move:12:13
   │
12 │             S { } => 0
   │             ^^^^^ Missing pattern for field 'y' in '0x42::m::S'

